# bidsreader

./: .gitignore  LICENSE  README.md  bidsreader.py  bidsreader_scratch.ipynb  pyproject.toml
.github/workflows/: test.yml
.ipynb_checkpoints/: bidsreader_scratch-checkpoint.ipynb
bidsreader/: __init__.py  _neurorad_algo.py  basereader.py  bidsreader.py  cmlbidsreader.py  convert.py  exc.py  filtering.py  helpers.py  public_helpers.py  region_enrichment.py  units.py  util.py
bidsreader/.ipynb_checkpoints/: __init__-checkpoint.py  _errorwrap-checkpoint.py  bidsreader-checkpoint.py  constants-checkpoint.py  exc-checkpoint.py
tests/: conftest.py  test_basereader.py  test_cmlbidsreader.py  test_convert.py  test_errorwrap.py  test_exc.py  test_filtering.py  test_helpers.py  test_neurorad_algo.py  test_pair_midpoint_parity.py  test_region_enrichment.py  test_units.py
tutorials/: bidsreader_tutorial.ipynb
